fixed .next() problem in examples notebook

--- a/batchgenerators/examples/example_ipynb.ipynb
+++ b/batchgenerators/examples/example_ipynb.ipynb
@@ -76,7 +76,7 @@
    ],
    "source": [
     "batchgen = DataLoader(data.camera(), 4, None, False)\n",
-    "batch = batchgen.next()\n",
+    "batch = next(batchgen)\n",
     "\n",
     "def plot_batch(batch):\n",
     "    batch_size = batch['data'].shape[0]\n",
@@ -206,7 +206,7 @@
    "source": [
     "# you can run this line several times to see different outputs. Note how the computation takes long for the \n",
     "# first run, but then the batches are returnes very quickly!\n",
-    "plot_batch(multithreaded_generator.next())"
+    "plot_batch(next(multithreaded_generator))"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "multithreaded_generator = MultiThreadedAugmenter(batchgen, all_transforms, 4, 2, seeds=None)\n",
     "for _ in range(20):\n",
     "    start = time()\n",
-    "    _ = multithreaded_generator.next()\n",
+    "    _ = next(multithreaded_generator)\n",
     "    batch_times.append(time() - start)\n",
     "    print(\"This batch took %02.3f s\" % batch_times[-1])\n",
     "\n",
@@ -293,7 +293,7 @@
     "multithreaded_generator = MultiThreadedAugmenter(batchgen, all_transforms, 1, 2, seeds=None)\n",
     "for _ in range(20):\n",
     "    start = time()\n",
-    "    _ = multithreaded_generator.next()\n",
+    "    _ = next(multithreaded_generator)\n",
     "    batch_times.append(time() - start)\n",
     "    print(\"This batch took %02.3f s\" % batch_times[-1])\n",
     "\n",
@@ -374,7 +374,7 @@
    ],
    "source": [
     "for _ in range(4):\n",
-    "    plot_batch(multithreaded_generator.next())"
+    "    plot_batch(next(multithreaded_generator))"
    ]
   },
   {
@@ -450,10 +450,10 @@
     "# time it\n",
     "start = time()\n",
     "for _ in range(100):\n",
-    "    _ = multithreaded_generator.next()\n",
+    "    _ = next(multithreaded_generator)\n",
     "print(\"Crop followed by SpatialTransform (20 batches) took: %02.3f s\" % (time()-start))\n",
     "\n",
-    "plot_batch(multithreaded_generator.next())\n",
+    "plot_batch(next(multithreaded_generator))\n",
     "\n",
     "print(\"\\n\\n\")\n",
     "\n",
@@ -469,10 +469,10 @@
     "# time it\n",
     "start = time()\n",
     "for _ in range(100):\n",
-    "    _ = multithreaded_generator.next()\n",
+    "    _ = next(multithreaded_generator)\n",
     "print(\"Crop integrated into SpatialTransform (20 batches) took: %02.3f s\" % (time()-start))\n",
     "\n",
-    "plot_batch(multithreaded_generator.next())"
+    "plot_batch(next(multithreaded_generator))"
    ]
   },
   {
@@ -515,7 +515,7 @@
     "multithreaded_generator = MultiThreadedAugmenter(batchgen, noise_transform, 4, 2, seeds=None)\n",
     "\n",
     "# you can run this line several times to see different outputs\n",
-    "plot_batch(multithreaded_generator.next())"
+    "plot_batch(next(multithreaded_generator))"
    ]
   },
   {
