fixed .next() problem in examples notebook

--- a/batchgenerators/examples/example_ipynb.ipynb
+++ b/batchgenerators/examples/example_ipynb.ipynb
@@ -551,7 +551,7 @@
     "multithreaded_generator = MultiThreadedAugmenter(batchgen, resample_transform, 1, 2, seeds=None)\n",
     "\n",
     "# you can run this line several times to see different outputs\n",
-    "plot_batch(multithreaded_generator.next())"
+    "plot_batch(next(multithreaded_generator))"
    ]
   },
   {
