--- a/batchgenerators/examples/example_ipynb.ipynb
+++ b/batchgenerators/examples/example_ipynb.ipynb
@@ -106,14 +106,14 @@
    "outputs": [],
    "source": [
     "from batchgenerators.transforms.color_transforms import ContrastAugmentationTransform\n",
-    "from batchgenerators.transforms.spatial_transforms import Mirror\n",
+    "from batchgenerators.transforms.spatial_transforms import MirrorTransform\n",
     "from batchgenerators.transforms.abstract_transforms import Compose\n",
     "from batchgenerators.dataloading.multi_threaded_augmenter import MultiThreadedAugmenter\n",
     "\n",
     "my_transforms = []\n",
     "brightness_transform = ContrastAugmentationTransform((0.3, 3.), preserve_range=True)\n",
     "my_transforms.append(brightness_transform)\n",
-    "mirror_transform = Mirror(axes=(0, 1))\n",
+    "mirror_transform = MirrorTransform(axes=(0, 1))\n",
     "my_transforms.append(mirror_transform)\n",
     "\n",
     "all_transforms = Compose(my_transforms)\n",
