--- a/batchgenerators/examples/multithreaded_with_batches.ipynb
+++ b/batchgenerators/examples/multithreaded_with_batches.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from batchgenerators.dataloading import SlimDataLoaderBase\n",
+    "from batchgenerators.dataloading.data_loader import SlimDataLoaderBase\n",
     "from batchgenerators.dataloading.multi_threaded_augmenter import MultiThreadedAugmenter\n",
     "\n",
     "import numpy as np\n",
